# gysela-mini-app_io

./: .gitmodules  CMakeLists.txt  README.md  launch_script.sh  spack.yaml
apps/: CMakeLists.txt  gys_io.cpp  gys_io.yaml  pdi_default.yaml
python/: analytics.py
src/: CMakeLists.txt
